feat: 채팅방 가입